--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@ body {
 }
 
 @media only screen and (min-width: 992px) {
-  .gridList, .gridList1 {
+  .gridList, .gridListImgs {
     width: 65%;
   }
 }
